Update sound jungle and remove one mascotte

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Project.xcconfig
 bin/data/.DS_Store
 bin/OK2Debug.app/Contents/MacOS/OK2Debug
 OK2.xcodeproj/project.xcworkspace/xcuserdata/janeveraert.xcuserdatad/UserInterfaceState.xcuserstate
+bin/data/.DS_Store
+bin/OK2Debug.app/Contents/MacOS/OK2Debug
